some more defensive programming, prompted by findbugs